# ana-agent

./: .env  .env.example  .gitignore  README.md  app.py  pyproject.toml  scrape_feishu.py  scrape_feishu_pw.py  server.py  test_db.py  test_ui.py
.chainlit/: config.toml
.files/7ba74348-e203-4d2d-b412-e286b8da30ba/: 176d6d6a-5dc1-4cb8-aaef-cfdcee8c9906.json  471aec49-60de-4c67-8000-a824004fdbf4.json  4dfd3ef6-0319-4981-86fc-a0bc7a77f718.json  71b1099e-06b4-408e-a22c-a7e702182f12.json  ec3415e2-118e-4821-acdc-d5b90bd546f9.json  f11967ee-a83f-45b7-9426-149fa73e57c0.json
api/routers/: analysis.py  chat.py  database.py  files.py  history.py  models.py  orchestration.py  rag.py  system.py  watchdog.py
contexts/: context.md
core/: agent.py  agent_types.py  config.py  database.py  db_adapter.py  feishu_api.py  intent_detector.py  prompts.py  scheduler.py  tasks.py
core/dbt/: parser.py  runner.py
core/etl/: __init__.py  dlt_runner.py
core/orchestration/: __init__.py  prefect_flows.py
core/rag/: ingestion.py  vector_store.py
core/sandbox/: __init__.py  executor.py
core/services/: __init__.py  agent_harness_service.py  brainstorm_service.py  dbt_service.py  etl_service.py  history_service.py  llm_service.py  metadata_service.py  orchestration_service.py  session_store_service.py  storage_service.py  system_diagnostics_service.py
core/tools/: chart_tools.py  code_interpreter_tool.py  (+9 more)
db_backup/: spotify_backup.sql
dbt_project/: .gitignore  dbt_project.yml  profiles.yml
frontend/: eslint.config.mjs  package-lock.json  package.json
reports/: 娱乐数据分析深度报告_202401.md
scripts/: check-agent.ps1  check_agent_runtime.py  start-dev.ps1
tests/: test_agent_harness_service.py  test_agent_routes_integration.py  test_analysis_sessions_api.py  test_brainstorm_service.py  test_chat_guards.py  test_chat_streaming_api.py  test_database.py  test_db_tools.py  test_dbt_parser.py  test_dbt_service.py  test_direct_route_messages.py  test_feishu_notifications.py  test_history_service.py  test_llm_service.py  test_metadata_service.py  test_orchestration_service.py  test_scheduler.py  test_session_store_service.py  test_system_api.py  test_system_diagnostics_service.py  test_tool_scope_selection.py  test_watchdog_rules_store.py
workflows/: movie_analysis_workflow.md
(+52 files in other folders)
