[project]
name = "my-sql-agent"
version = "0.1.0"
description = "SQL Agent with FastAPI backend and React frontend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.2.0",
    "asyncpg>=0.31.0",
    "fastapi>=0.135.1",
    "langchain>=1.2.10",
    "langchain-openai>=1.1.10",
    "langgraph>=1.0.10",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "numpy>=2.4.2",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "psycopg2>=2.9.11",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "sqlalchemy>=2.0.48",
    "sse-starlette>=2.0.0",
    "uvicorn>=0.41.0",
    "chromadb>=1.5.5",
    "langchain-chroma>=1.1.0",
    "langchain-huggingface>=0.3.1",
    "sentence-transformers>=3.0.0",
    "langchain-community>=0.4.1",
    "dbt-core>=1.11.7",
    "dbt-duckdb>=1.10.1",
    "dlt[duckdb]>=1.24.0",
    "pyarrow>=23.0.1",
    "duckdb-engine>=0.17.0",
    "prefect>=3.6.23",
]
